# CPGen

./: .clang-tidy  .gitignore  Ascii_8hpp.html  Ascii_8hpp__dep__incl.map  Ascii_8hpp__dep__incl.md5  Ascii_8hpp_source.html  CLI_8cpp.html  CLI_8cpp__incl.map  CLI_8cpp__incl.md5  CLI_8hpp.html  CLI_8hpp__dep__incl.map  CLI_8hpp__dep__incl.md5  CLI_8hpp__incl.map  CLI_8hpp__incl.md5  CLI_8hpp_source.html  CMakeEmitter_8cpp.html  CMakeEmitter_8cpp__incl.map  CMakeEmitter_8cpp__incl.md5  CMakeEmitter_8hpp.html  CMakeEmitter_8hpp__dep__incl.map  CMakeEmitter_8hpp__dep__incl.md5  CMakeEmitter_8hpp__incl.map  CMakeEmitter_8hpp__incl.md5  CMakeEmitter_8hpp_source.html  CMakeLists.txt  CMakeProvider_8cpp.html  CMakeProvider_8cpp__incl.map  CMakeProvider_8cpp__incl.md5  CMakeProvider_8hpp.html  CMakeProvider_8hpp__dep__incl.map  CMakeProvider_8hpp__dep__incl.md5  CMakeProvider_8hpp__incl.map  CMakeProvider_8hpp__incl.md5  CMakeProvider_8hpp_source.html  CheckboxGroup_8cpp.html  CheckboxGroup_8cpp__incl.map  CheckboxGroup_8cpp__incl.md5  CheckboxGroup_8hpp.html  CheckboxGroup_8hpp__dep__incl.map  CheckboxGroup_8hpp__dep__incl.md5  (+576 more)
.github/workflows/: UT.yml  main.yml
include/CPGen/CLI/: CLI.hpp  Errno.hpp
include/CPGen/Core/: Config.hpp  Module.hpp  Resolved.hpp
include/CPGen/FileSystemWriter/: FileSystemWriter.hpp
include/CPGen/Generators/: CMakeGenerator.hpp
include/CPGen/Pipeline/: CMakeEmitter.hpp  Emitter.hpp  GenerationPipeline.hpp  ScaffoldEmitter.hpp  ToolingEmitter.hpp
include/CPGen/ProjectGenerator/: ProjectGenerator.hpp
include/CPGen/Providers/: CMakeProvider.hpp
include/CPGen/Resolvers/: ModuleResolver.hpp  ProjectResolver.hpp
include/CPGen/System/: PathResolver.hpp  System.hpp
include/CPGen/System/Preferences/: PreferencesManager.hpp
include/CPGen/TUI/Components/: Component.hpp
include/CPGen/TUI/Misc/: Ascii.hpp  Defs.hpp  Terminal.hpp  Utils.hpp
include/CPGen/TemplateEngine/: TemplateEngine.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  classes_a.js  classes_b.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  (+49 more)
src/: main.cpp
src/CLI/: CLI.cpp
src/FileSystemWriter/: FileSystemWriter.cpp
src/Generators/: CMakeGenerator.cpp
src/Pipeline/: CMakeEmitter.cpp  GenerationPipeline.cpp  ScaffoldEmitter.cpp  ToolingEmitter.cpp
src/ProjectGenerator/: ProjectGenerator.cpp
src/Providers/: CMakeProvider.cpp
src/Resolvers/: ModuleResolver.cpp  ProjectResolver.cpp
src/System/: PathResolver.cpp  System.cpp
src/System/Preferences/: PreferencesManager.cpp
src/TUI/View/: MainView.cpp  View.cpp
src/TemplateEngine/: TemplateEngine.cpp
templates/base/: CMakeLists.txt  readme.md
templates/base/src/: main.cpp
templates/features/clang-tidy/: .clang-tidy
templates/modules/catch2/: catch2.json  example.cpp
templates/modules/fmt/: example.cpp  fmt.json
templates/modules/gtest/: gtest.json
templates/modules/spdlog/: example.cpp  spdlog.json
tests/: UTCLI.cpp  UTCMakeEmitter.cpp  UTCMakeProvider.cpp  UTGenerationPipeline.cpp  UTModuleResolver.cpp  UTProjectResolver.cpp  UTScaffoldEmitter.cpp  UTToolingEmitter.cpp  main.cpp
(+10 files in other folders)
